Fix bug where long toolbars wouldn't be wrapped.

--- a/pageOverlay.css
+++ b/pageOverlay.css
@@ -1,2 +1,2 @@
-._shine-overlay { position:fixed; bottom:10px; right:-100%; width:95%; height:32px; background:-webkit-gradient(linear, left bottom, left top, color-stop(0, rgba(0,0,0,.93)), color-stop(1, rgba(50,50,50,.93))); border:1px solid black; border-top-left-radius:5px; border-bottom-left-radius:5px; -webkit-box-shadow:0 4px 4px rgba(0,0,0,.5); z-index:999999; }
+._shine-overlay { position:fixed; bottom:10px; right:-100%; width:95%; max-width:95%; height:32px; background:-webkit-gradient(linear, left bottom, left top, color-stop(0, rgba(0,0,0,.93)), color-stop(1, rgba(50,50,50,.93))); border:1px solid black; border-top-left-radius:5px; border-bottom-left-radius:5px; -webkit-box-shadow:0 4px 4px rgba(0,0,0,.5); z-index:999999; }
 ._shine-overlay iframe { width:100%; height:200px; }
